# tagandtake-backend

./: .gitignore  Dockerfile  LICENSE  Procfile  README.md  docker-compose.yml  manage.py  pyproject.toml
apps/accounts/: apps.py  auth.py  constants.py  handlers.py  jwt_manager.py  models.py  processors.py  serializers.py  services.py  signals.py  urls.py  utils.py  validators.py  views.py
apps/common/: abstract_classes.py  auth_helpers.py  constants.py  responses.py  utils.py
apps/core/: models.py  serializers.py  services.py  urls.py  views.py
apps/items/: models.py  permissions.py  serializers.py  services.py  urls.py  views.py
apps/marketplace/: admin.py  apps.py  constants.py  handlers.py  models.py  permissions.py  pricing.py  processors.py  serializers.py  services.py  signals.py  urls.py  utils.py  views.py
apps/members/: apps.py  models.py  permissions.py  serializers.py  services.py  signals.py  urls.py  utils.py  views.py
apps/notifications/: apps.py  utils.py
apps/payments/: apps.py  constants.py  models.py  processors.py  serializers.py  signals.py  stripe_event_dispatcher.py  urls.py  utils.py  views.py  webhooks.py
apps/stores/: admin.py  apps.py  handlers.py  models.py  permissions.py  serializers.py  services.py  signals.py  tasks.py  urls.py  utils.py  views.py
apps/supplies/: apps.py  models.py  process_manager.py  processor_registry.py  processors.py  serializers.py  services.py
apps/tagandtake/: apps.py  models.py  processor_registry.py  processors.py  serializers.py  services.py
apps/users/: models.py  serializers.py  urls.py  views.py
async_tasks/: celery.py  schedules.py
config/: asgi.py  urls.py  wsgi.py
config/settings/: base.py  dev.py  prod.py
docker/: Dockerfile
middleware/: jwt_authentication_middleware.py
my_celery/: celery.py  schedules.py
ops/: migrate.sh  restore.sh  seed.sh
scripts/: run_dev.sh  run_prod.sh  run_staging.sh
tagandtake/: asgi.py  urls.py  wsgi.py
tnt_backend/: asgi.py  settings.py  urls.py  wsgi.py
(+213 files in other folders)
